added table if press space bar to piece to check details

--- a/weatherSynth.html
+++ b/weatherSynth.html
@@ -36,24 +36,24 @@
                         </tr>
                         <tr>
                             <td>Day 1-4 cloudiness (%)</td>
-                            <td>Video 1-4 max opacity and volume. As well as volume of the oscillators</td>
+                            <td>Video 1-4 max opacity and volume.<br>As well as volume of the oscillators</td>
                             <td id="weatherCloudiness"></td>
                             <td id="mappedCloudiness"></td>
                         </tr>
                         <tr>
                             <td>Current wind speed and day 1-3 wind speed</td>
-                            <td>Auto filter LFO speeds, phaser frequency and the frequency of the auto panners</td>
+                            <td>Auto filter LFO speeds,<br>phaser frequency and the frequency of the auto panners</td>
                             <td id="weatherWindSpeed"></td>
                             <td id="mappedWindSpeed"></td>
                         </tr>
                         <tr>
                             <td>Day 1-4 humidity (%)</td>
-                            <td>Controls the base frequency of the auto filters</td>
+                            <td>Controls the base frequency<br>of the auto filters</td>
                             <td id="weatherHumidity"></td>
                             <td id="mappedHumidity"></td>
                         </tr>
                         <tr>
-                            <td>Current dew point and day 2 dew point</td>
+                            <td>Current dew point<br>and day 2 dew point</td>
                             <td>Reverb 1 and 2 decay time</td>
                             <td id="weatherDewPoint"></td>
                             <td id="mappedDewPoint"></td>
@@ -72,13 +72,13 @@
                         </tr>
                         <tr>
                             <td>Day 1-4 daytime "feels like" temperature</td>
-                            <td>Controls how detuned the oscillators are</td>
+                            <td>Controls how detuned<br>the oscillators are</td>
                             <td id="weatherFeelsLike"></td>
                             <td id="mappedFeelsLike"></td>
                         </tr>
                         <tr>
                             <td>Day 1, 2, 4 and 7 moon phase</td>
-                            <td>Controls the phase position of the oscillators</td>
+                            <td>Controls the phase position<br>of the oscillators</td>
                             <td id="weatherMoonPhase"></td>
                             <td>1-1 mapping</td>
                         </tr>
