--- a/weatherSynth.html
+++ b/weatherSynth.html
@@ -41,8 +41,8 @@
                             <td id="mappedCloudiness"></td>
                         </tr>
                         <tr>
-                            <td>Current wind speed and day 1-3 wind speed</td>
-                            <td>Auto filter LFO speeds,<br>phaser frequency and the frequency of the auto panners</td>
+                            <td>Current wind speed<br>and day 1-3 wind speed</td>
+                            <td>Auto filter LFO speeds,<br>phaser frequency and the <br>frequency of the auto panners</td>
                             <td id="weatherWindSpeed"></td>
                             <td id="mappedWindSpeed"></td>
                         </tr>
@@ -71,7 +71,7 @@
                             <td>1-1 mapping</td>
                         </tr>
                         <tr>
-                            <td>Day 1-4 daytime "feels like" temperature</td>
+                            <td>Day 1-4 daytime <br>"feels like" temperature</td>
                             <td>Controls how detuned<br>the oscillators are</td>
                             <td id="weatherFeelsLike"></td>
                             <td id="mappedFeelsLike"></td>
