Updated live table

--- a/weatherSynth.html
+++ b/weatherSynth.html
@@ -41,7 +41,8 @@
                         </tr>
                         <tr>
                             <td>Current wind speed<br>and day 1-3 wind speed</td>
-                            <td>Auto filter LFO speeds,<br>phaser frequency and the <br>frequency of the auto panners</td>
+                            <td>Auto filter LFO speeds,<br>phaser frequency and the <br>frequency of the auto panners
+                            </td>
                             <td id="weatherWindSpeed"></td>
                             <td id="mappedWindSpeed"></td>
                         </tr>
