Removed reverb 2 as reverbs in tone.js have the highest processing requirement

--- a/weatherSynth.html
+++ b/weatherSynth.html
@@ -53,8 +53,8 @@
                             <td id="mappedHumidity"></td>
                         </tr>
                         <tr>
-                            <td>Current dew point<br>and day 2 dew point</td>
-                            <td>Reverb 1 and 2 decay time</td>
+                            <td>Current dew point</td>
+                            <td>Reverb decay time</td>
                             <td id="weatherDewPoint"></td>
                             <td id="mappedDewPoint"></td>
                         </tr>
