--- a/about.html
+++ b/about.html
@@ -51,9 +51,9 @@
                     <td>Humidity % controls where the auto filters begin oscillating at</td>
                 </tr>
                 <tr>
-                    <td>Current dew point and day 2 dew point</td>
-                    <td>Reverb 1 and 2 decay time</td>
-                    <td>Running the whole piece through two reverb should take off any harsh edges the higher the dew point the longer the decay time</td>
+                    <td>Current dew point</td>
+                    <td>Reverb decay time</td>
+                    <td>Running the whole piece through reverb should take off any harsh edges, the higher the dew point the longer the decay time</td>
                 </tr>
                 <tr>
                     <td>Daily min and max temperature</td>
